increase font size to prevent zoom on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ form {
 }
 
 select {
-  font-size: 14px;
+  font-size: 16px;
   padding: 12px 20px;
   margin: 8px 0;
   border: 2px solid #ccc;
@@ -116,7 +116,7 @@ textarea, input {
   padding: 12px 20px;
   margin: 8px 5px;
   border: 2px solid #ccc;
-  font-size: 14px;
+  font-size: 16px;
   border-radius: 4px;
   resize: vertical;
   max-width: 80%;
@@ -125,7 +125,7 @@ textarea, input {
   border: 2px solid #ccc;
   background-color: #DEDCE4;
   margin: 3px 3px;
-  font-size: 14px;
+  font-size: 16px;
   padding: 12px 20px;
   border-radius: 5px;
   box-shadow: 0 2px 3px 0 rgba(0,0,0,0.2), 0 2px 3px 0 rgba(0,0,0,0.19);
@@ -163,4 +163,14 @@ div.content div.table-content {
 
 .bb-title {
   font-size: 40px;
+}
+
+
+input[type="date"],
+input[type="number"],
+input[type="password"],
+input[type="text"],
+select:focus,
+textarea {
+  font-size: 16px;
 }
